# fenix

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.gui  Dockerfile.ml  Dockerfile.ml.ubuntu  Dockerfile.ubuntu  Dockerfile.vast  README.md  bootstrap.sh  install-runpod-ubuntu2404.sh  install-ubuntu.sh  plan.txt
.github/workflows/: ci.yml  vast-image.yml
apps/: CLAUDE.md  driver.cpp  gui.cpp
cmake/: clang-toolchain.cmake  clang-windows-toolchain.cmake  deps-windows-vendor.cmake  deps-windows-zlib.cmake  deps.cmake
cmake/patches/: pytorch-musl-assert-fail.patch  vtk-diy2-fmt-char8t.patch
cmake/scripts/: build-blosc2.sh  build-libtorch.sh  build-mimalloc.sh  build-qt6.sh  build-vtk.sh
cmake/win-compat/: win_compat.cpp
configs/gpu/: mi300x.toml  rtx5060ti.toml  rtx5090.toml  rtx6000pro.toml
docs/: conventions.md  glossary.md
docs/adr/: 0000-index.md  0001-foundations.md  0002-codec-and-container.md  0003-unified-unrolling.md  0004-process-and-quality.md  0005-retire-wavelet-dct-tile-codec.md  0006-fxvol-v4-container.md  0007-fxvol-fuse-transparent-array.md  0008-split-build-multi-tu.md  0009-gpu-portability-vendor-neutral.md  0010-tensorrt-engine-path.md  0010-tile2d-surface-codec.md  0011-render3d-vtk-gigavoxels-metal.md
docs/data/: open-data-manifest.toml
docs/design/: README.md  codec-vs-ml-degradation.md  docker.md  eval-split.example.toml  fp8-conv3d-sm120.md  fp8-perf-review-plan.md  full-scroll-model.md  fxvol-v4-layout.md  gt-autograde-improve.md  gt-metrics-hardening.md  gt-quality-adversarial-plan.md  gt-quality-sota-research.md  ink-hunt.md  int8-optimize-plan.md  ml-accel-and-distillation.md  model-registry.md  multiscale-instance-surface.md  multiscale-surface.md  render3d.md  student-distill-plan.md  training-pipeline.md  viewer-annotation.md  winding-pilot-ablation.md
docs/research/: research-build.md  research-c3d.md  research-core.md  research-deps.md  research-fysics.md  research-mc.md  research-tools.md  spiral-v2.md  villa-data.md  villa-ml.md  villa-thaumato.md  villa-training.md  villa-vc.md
scripts/: box_prep_inst_corpus.py
src/: fenix.hpp
src/annotate/: CLAUDE.md  annotate.cpp  annotate.hpp  annotation.hpp  extract.hpp  umbilicus.hpp  umbilicus_fit.hpp
src/codec/: CLAUDE.md  archive.hpp  block.hpp  block_cache.hpp  codec.cpp  codec.hpp  dct.hpp  dct64.hpp  dct_block.hpp  dtype.hpp  entropy.hpp  lossless.hpp  rans.hpp  source.hpp  tile2d.hpp  wavelet.hpp
src/core/: CLAUDE.md  arena.hpp  config.hpp  core.hpp  eig.hpp  error.hpp  filter.hpp  hash.hpp  log.hpp  optimize.hpp  parallel.hpp  pool.hpp  rng.hpp  sampling.hpp  surface.hpp  test.hpp  tolerances.hpp  types.hpp  vec.hpp  volume.hpp
src/eval/: CLAUDE.md  deformation.hpp  eval.cpp  eval.hpp  mesh_quality.hpp  metrics.hpp  nsd.hpp  score.hpp
src/flatten/: CLAUDE.md  extract_wrap.hpp  flatten.cpp  flatten.hpp  slim.hpp  sparse.hpp
src/fs/: CLAUDE.md  fxfs.cpp
src/geom/: CLAUDE.md  connected_components.hpp  edt.hpp  geom.cpp  geom.hpp  kdtree.hpp  marching.hpp  mesh.hpp  morphology.hpp  rtree.hpp
src/gui/: CLAUDE.md  chunk3d.hpp  gui.hpp  panes.hpp  scroll3d.hpp  state.hpp  surf3d.hpp  viewer.hpp  vol3d.hpp
src/io/: CLAUDE.md  cache.hpp  cached_volume.hpp  dct3d.hpp  import_obj.hpp  io.cpp  io.hpp  jpeg.hpp  nrrd.hpp  png.hpp  pred_clean.hpp  project.hpp  s3.hpp  scan_meta.hpp  sigv4.hpp  slice.hpp  surface.hpp  tiff.hpp  tifxyz.hpp  zarr.hpp
src/ml/: CLAUDE.md  aoti_net.hpp  augment.hpp  augment_cli.hpp  feed.hpp  global_accum.hpp  infer.hpp  inference.cpp  ingest_band.hpp  ingest_labels.hpp  label_audit.hpp  ml.cpp  ml.hpp  ml_api.hpp  qc_chunk.hpp  rasterize.hpp  sampler.hpp  stroke_score.hpp  surf_consist.hpp  surf_qc.hpp  surf_repair.hpp  surf_sheet.hpp  surface_index.hpp  surfaces_cli.hpp  tiling.hpp  torch_env.hpp  trt_engine.hpp  weights.hpp
src/postproc/: CLAUDE.md  cleanup.hpp  morph.hpp  postproc.cpp  postproc.hpp
src/predictions/: CLAUDE.md  field.hpp  predictions.cpp  predictions.hpp
src/preprocess/: CLAUDE.md  aircut.hpp  deconv.hpp  dering.hpp  fft.hpp  guided.hpp  musica.hpp  phasecorr.hpp  preproc_cli.hpp  preprocess.cpp  preprocess.hpp  register_scans.hpp
src/render/: CLAUDE.md  bake.hpp  layers.hpp  render.cpp  render.hpp  surface_render.hpp  unroll.hpp
src/segment/: CLAUDE.md  affinity.hpp  ced.hpp  ct_valley.hpp  grow.hpp  hessian.hpp  partition.hpp  patch_graph.hpp  ridge.hpp  segment.cpp  segment.hpp  sheet_field.hpp  stream_grow.hpp  structure_tensor.hpp  trace_eval.hpp  trace_stream.hpp  trace_surface.hpp  tracer.hpp
src/topo/: CLAUDE.md  betti.hpp  topo.cpp  topo.hpp
src/units/: annotate.cpp  codec.cpp  eval.cpp  flatten.cpp  geom.cpp  io.cpp  ml.cpp  postproc.cpp  predictions.cpp  preprocess.cpp  render.cpp  segment.cpp  topo.cpp  winding.cpp
src/view/: CLAUDE.md  composite.hpp  prefetch.hpp  sampler.hpp  slice_engine.hpp  view.cpp  view.hpp
src/winding/: CLAUDE.md  anno_bridge.hpp  corpus_bridge.hpp  cosegment.hpp  diffeo_fit.hpp  fit.hpp  fit_bridge.hpp  flow.hpp  model_io.hpp  patch_field.hpp  relax.hpp  spiral_fit.hpp  spiral_model.hpp  stitch_stream.hpp  trace_long.hpp  transforms.hpp  winding.cpp  winding.hpp  winding_field.hpp  wrap_fill.hpp  wrap_label.hpp
tests/: CLAUDE.md  bench_vol.hpp  fuzz_dct_tile_decode.cpp  fuzz_fxvol_open.cpp  fuzz_lossless_decode.cpp  fuzz_read_obj.cpp  fuzz_zarray_json.cpp  test_annotate.cpp  test_archive.cpp  test_augment.cpp  test_block.cpp  test_build_lods.cpp  test_cache.cpp  test_cached_volume.cpp  test_codec_bench.cpp  test_config.cpp  test_core.cpp  test_cosegment.cpp  test_dct.cpp  test_dct_block.cpp  test_deconv.cpp  test_deformation.cpp  test_diffeo_fit.cpp  test_eig.cpp  test_entropy.cpp  test_eval_geom.cpp  test_feed.cpp  test_fft.cpp  test_filter.cpp  test_fit.cpp  test_fit_bridge.cpp  test_flatten.cpp  test_flow.cpp  test_fxvol.cpp  test_geom.cpp  test_global_accum.cpp  test_grow.cpp  test_guided.cpp  test_hessian.cpp  test_io.cpp  (+54 more)
tools/: CLAUDE.md  opendata_manifest.py
(+171 files in other folders)
